--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!doctype html>
+	<head>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+		<link rel="stylesheet" href="css/style.css" />
+
+		<title>Markdown Previewer</title>
+	</head>
+	<body>
+		<div id='app'>Testing</div>
+	</body>
 
 
-<div id='app'></div>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.7/marked.min.js'></script>
+	<script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+	<script type='text/babel' src='script.js'></script>
+<html>
